# kube-custom-resources-rs

./: .gitignore  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  README.md  generate.sh  rust-toolchain.toml
code-generator/: Cargo.toml  adjust-cargo-toml.sh  create-custom-resources.sh  create-mod-rs-files.sh  fix-cargo-warnings.sh  generate-custom-resources.sh  generate.sh  quote-yaml-strings.sh  run-fixups.sh  test-custom-resources.sh  try-buggy-resources.sh
code-generator/src/: catalog.rs  lib.rs
code-generator/src/templates/: Cargo.toml.hbs  README-crate.md.hbs  README-project.md.hbs  Workspace.toml.hbs  dep5.hbs  lib.rs.hbs  mod.rs.hbs  release-crd.yml.hbs  verify-crd.yml.hbs
crd-v1-fetcher/: Cargo.toml
crd-v1-fetcher/src/: catalog.rs  main.rs
custom-resources/apiextensions_crossplane_io/: Cargo.toml  README.md
custom-resources/apiextensions_crossplane_io/src/: lib.rs
custom-resources/apm_k8s_elastic_co/: Cargo.toml  README.md
custom-resources/apm_k8s_elastic_co/src/: lib.rs
custom-resources/gateway_networking_x_k8s_io/: Cargo.toml  README.md
custom-resources/gateway_networking_x_k8s_io/src/: lib.rs
custom-resources/iot_eclipse_org/: Cargo.toml  README.md
custom-resources/iot_eclipse_org/src/: lib.rs
custom-resources/networking_istio_io/: Cargo.toml  README.md
custom-resources/networking_istio_io/src/: lib.rs
custom-resources/upgrade_managed_openshift_io/: Cargo.toml  README.md
custom-resources/upgrade_managed_openshift_io/src/: lib.rs
kube-custom-resources-rs/: Cargo.toml  Cargo.toml.license
kube-custom-resources-rs/src/: lib.rs
kube-custom-resources-rs/src/about_k8s_io_v1alpha1/: clusterproperties.rs
kube-custom-resources-rs/src/acid_zalan_do_v1/: mod.rs  operatorconfigurations.rs  postgresteams.rs
kube-custom-resources-rs/src/acme_cert_manager_io_v1/: challenges.rs  orders.rs
kube-custom-resources-rs/src/actions_github_com_v1alpha1/: autoscalinglisteners.rs  autoscalingrunnersets.rs  ephemeralrunnersets.rs
kube-custom-resources-rs/src/actions_summerwind_dev_v1alpha1/: horizontalrunnerautoscalers.rs  mod.rs  runnerdeployments.rs  runnerreplicasets.rs  runners.rs  runnersets.rs
kube-custom-resources-rs/src/addons_cluster_x_k8s_io/: mod.rs
kube-custom-resources-rs/src/addons_cluster_x_k8s_io_v1alpha4/: clusterresourcesetbindings.rs  clusterresourcesets.rs
kube-custom-resources-rs/src/addons_cluster_x_k8s_io_v1beta1/: clusterresourcesetbindings.rs  clusterresourcesets.rs
kube-custom-resources-rs/src/agent_k8s_elastic_co_v1alpha1/: agents.rs
kube-custom-resources-rs/src/api_clever_cloud_com_v1/: mysqls.rs
kube-custom-resources-rs/src/apicodegen_apimatic_io_v1beta1/: apimatics.rs  mod.rs
kube-custom-resources-rs/src/apiextensions_crossplane_io_v1/: compositeresourcedefinitions.rs
kube-custom-resources-rs/src/apigatewayv2_services_k8s_aws_v1alpha1/: apis.rs  authorizers.rs  deployments.rs  integrations.rs  mod.rs  routes.rs  stages.rs  vpclinks.rs
kube-custom-resources-rs/src/apisix_apache_org_v2/: apisixpluginconfigs.rs  apisixtlses.rs  apisixupstreams.rs  mod.rs
kube-custom-resources-rs/src/apm_k8s_elastic_co_v1/: apmservers.rs
kube-custom-resources-rs/src/apm_k8s_elastic_co_v1beta1/: apmservers.rs
kube-custom-resources-rs/src/app_kiegroup_org_v1beta1/: kogitobuilds.rs  kogitoinfras.rs  kogitoruntimes.rs  kogitosupportingservices.rs  mod.rs
kube-custom-resources-rs/src/app_lightbend_com_v1alpha1/: akkaclusters.rs
kube-custom-resources-rs/src/app_redislabs_com_v1/: mod.rs  redisenterpriseclusters.rs
kube-custom-resources-rs/src/app_redislabs_com_v1alpha1/: mod.rs  redisenterpriseactiveactivedatabases.rs  redisenterpriseclusters.rs  redisenterprisedatabases.rs  redisenterpriseremoteclusters.rs
kube-custom-resources-rs/src/app_terraform_io_v1alpha2/: agentpools.rs  mod.rs  modules.rs  workspaces.rs
kube-custom-resources-rs/src/applicationautoscaling_services_k8s_aws_v1alpha1/: mod.rs  scalabletargets.rs  scalingpolicies.rs
kube-custom-resources-rs/src/appprotect_f5_com_v1beta1/: aplogconfs.rs  apusersigs.rs
kube-custom-resources-rs/src/appprotectdos_f5_com_v1beta1/: apdoslogconfs.rs  apdospolicies.rs  dosprotectedresources.rs  mod.rs
kube-custom-resources-rs/src/apps_3scale_net_v1alpha1/: apicasts.rs
kube-custom-resources-rs/src/apps_clusternet_io_v1alpha1/: bases.rs  descriptions.rs  feedinventories.rs  globalizations.rs  helmcharts.rs  helmreleases.rs  localizations.rs  mod.rs  subscriptions.rs
kube-custom-resources-rs/src/apps_emqx_io/: mod.rs
kube-custom-resources-rs/src/apps_emqx_io_v1beta3/: emqxplugins.rs
kube-custom-resources-rs/src/apps_emqx_io_v1beta4/: emqxbrokers.rs  emqxenterprises.rs
kube-custom-resources-rs/src/apps_gitlab_com_v1beta1/: gitlabs.rs  mod.rs
kube-custom-resources-rs/src/apps_kubeblocks_io_v1alpha1/: backuppolicytemplates.rs  clusterdefinitions.rs  clusters.rs  clusterversions.rs  componentresourceconstraints.rs  mod.rs  servicedescriptors.rs
kube-custom-resources-rs/src/apps_kubedl_io_v1alpha1/: crons.rs
kube-custom-resources-rs/src/apps_kubeedge_io_v1alpha1/: edgeapplications.rs  mod.rs  nodegroups.rs
kube-custom-resources-rs/src/apps_m88i_io_v1alpha1/: nexus.rs
kube-custom-resources-rs/src/apps_redhat_com_v1alpha1/: clusterimpairments.rs
kube-custom-resources-rs/src/aquasecurity_github_io_v1alpha1/: aquastarboards.rs
kube-custom-resources-rs/src/argoproj_io_v1alpha1/: applications.rs  appprojects.rs  argocdexports.rs  argocds.rs  mod.rs
kube-custom-resources-rs/src/argoproj_io_v1beta1/: argocds.rs
kube-custom-resources-rs/src/asdb_aerospike_com_v1/: aerospikeclusters.rs
kube-custom-resources-rs/src/asdb_aerospike_com_v1beta1/: aerospikeclusters.rs
kube-custom-resources-rs/src/atlasmap_io_v1alpha1/: atlasmaps.rs
kube-custom-resources-rs/src/auth_ops42_org_v1alpha1/: mod.rs
kube-custom-resources-rs/src/autoscaling_k8s_io_v1/: verticalpodautoscalercheckpoints.rs  verticalpodautoscalers.rs
kube-custom-resources-rs/src/autoscaling_k8s_io_v1beta2/: verticalpodautoscalercheckpoints.rs  verticalpodautoscalers.rs
(+10170 files in other folders)
