# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[workspace]
members = [
    "code-generator",
    "kube-custom-resources-rs",
]
resolver = "2"

[profile.dev]
# Disable settings to speeds up builds
debug = false
lto = "off"
incremental = false
strip = "none"
debug-assertions = false
overflow-checks = false
