# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[workspace]
members = [
    "custom-resources/about_k8s_io",
    "custom-resources/acid_zalan_do",
    "custom-resources/onepassword_com",
    "custom-resources/apps_3scale_net",
    "custom-resources/capabilities_3scale_net",
    "custom-resources/marin3r_3scale_net",
    "custom-resources/operator_marin3r_3scale_net",
    "custom-resources/imaging_ingestion_alvearie_org",
    "custom-resources/registry_apicur_io",
    "custom-resources/azure_microsoft_com",
    "custom-resources/api_clever_cloud_com",
    "custom-resources/postgres_operator_crunchydata_com",
    "custom-resources/datadoghq_com",
    "custom-resources/secrets_doppler_com",
    "custom-resources/rbacmanager_reactiveops_io",
    "custom-resources/charts_flagsmith_com",
    "custom-resources/chisel_operator_io",
    "custom-resources/oracle_db_anthosapis_com",
    "custom-resources/networking_gke_io",
    "custom-resources/sparkoperator_k8s_io",
    "custom-resources/hyperfoil_io",
    "custom-resources/caching_ibm_com",
    "custom-resources/designer_kaoto_io",
    "custom-resources/operator_authorino_kuadrant_io",
    "custom-resources/kuadrant_io",
    "custom-resources/limitador_kuadrant_io",
    "custom-resources/core_linuxsuren_github_com",
    "custom-resources/trident_netapp_io",
    "custom-resources/charts_amd_com",
    "custom-resources/app_redislabs_com",
    "custom-resources/pubsubplus_solace_com",
    "custom-resources/spv_no",
    "custom-resources/beegfs_csi_netapp_com",
    "custom-resources/operator_victoriametrics_com",
    "custom-resources/actions_github_com",
    "custom-resources/actions_summerwind_dev",
    "custom-resources/asdb_aerospike_com",
    "custom-resources/nativestor_alauda_io",
    "custom-resources/topolvm_cybozu_com",
    "custom-resources/temporal_io",
    "custom-resources/awx_ansible_com",
    "custom-resources/multicluster_crd_antrea_io",
    "custom-resources/apisix_apache_org",
    "custom-resources/camel_apache_org",
    "custom-resources/flink_apache_org",
    "custom-resources/rocketmq_apache_org",
    "custom-resources/apps_kubeblocks_io",
    "custom-resources/dataprotection_kubeblocks_io",
    "custom-resources/extensions_kubeblocks_io",
    "custom-resources/storage_kubeblocks_io",
    "custom-resources/workloads_kubeblocks_io",
    "custom-resources/apicodegen_apimatic_io",
    "custom-resources/rc_app_stacks",
    "custom-resources/aquasecurity_github_io",
    "custom-resources/operator_aquasec_com",
    "custom-resources/argoproj_io",
    "custom-resources/apacheweb_arsenal_dev",
    "custom-resources/atlasmap_io",
    "custom-resources/authzed_com",
    "custom-resources/cloudwatch_aws_amazon_com",
    "custom-resources/networking_k8s_aws",
    "custom-resources/vpcresources_k8s_aws",
    "custom-resources/appmesh_k8s_aws",
    "custom-resources/application_networking_k8s_aws",
    "custom-resources/anywhere_eks_amazonaws_com",
    "custom-resources/karpenter_k8s_aws",
    "custom-resources/karpenter_sh",
    "custom-resources/zonecontrol_k8s_aws",
    "custom-resources/acmpca_services_k8s_aws",
    "custom-resources/apigatewayv2_services_k8s_aws",
    "custom-resources/applicationautoscaling_services_k8s_aws",
    "custom-resources/cloudfront_services_k8s_aws",
    "custom-resources/cloudtrail_services_k8s_aws",
    "custom-resources/cloudwatch_services_k8s_aws",
    "custom-resources/cloudwatchlogs_services_k8s_aws",
    "custom-resources/documentdb_services_k8s_aws",
    "custom-resources/dynamodb_services_k8s_aws",
    "custom-resources/ec2_services_k8s_aws",
    "custom-resources/ecr_services_k8s_aws",
    "custom-resources/efs_services_k8s_aws",
    "custom-resources/eks_services_k8s_aws",
    "custom-resources/services_k8s_aws",
    "custom-resources/elasticache_services_k8s_aws",
    "custom-resources/emrcontainers_services_k8s_aws",
    "custom-resources/iam_services_k8s_aws",
    "custom-resources/kafka_services_k8s_aws",
    "custom-resources/keyspaces_services_k8s_aws",
    "custom-resources/kinesis_services_k8s_aws",
    "custom-resources/kms_services_k8s_aws",
    "custom-resources/lambda_services_k8s_aws",
    "custom-resources/memorydb_services_k8s_aws",
    "custom-resources/mq_services_k8s_aws",
    "custom-resources/networkfirewall_services_k8s_aws",
    "custom-resources/opensearchservice_services_k8s_aws",
    "custom-resources/organizations_services_k8s_aws",
    "custom-resources/pipes_services_k8s_aws",
    "custom-resources/prometheusservice_services_k8s_aws",
    "custom-resources/rds_services_k8s_aws",
    "custom-resources/route53_services_k8s_aws",
    "custom-resources/route53resolver_services_k8s_aws",
    "custom-resources/s3_services_k8s_aws",
    "custom-resources/sagemaker_services_k8s_aws",
    "custom-resources/secretsmanager_services_k8s_aws",
    "custom-resources/sfn_services_k8s_aws",
    "custom-resources/sns_services_k8s_aws",
    "custom-resources/sqs_services_k8s_aws",
    "custom-resources/b3scale_infra_run",
    "custom-resources/b3scale_io",
    "custom-resources/snapscheduler_backube",
    "custom-resources/volsync_backube",
    "custom-resources/servicemesh_cisco_com",
    "custom-resources/kafka_banzaicloud_io",
    "custom-resources/claudie_io",
    "custom-resources/bitnami_com",
    "custom-resources/integration_rock8s_com",
    "custom-resources/bpfman_io",
    "custom-resources/lb_lbconfig_carlosedp_com",
    "custom-resources/acme_cert_manager_io",
    "custom-resources/cert_manager_io",
    "custom-resources/trust_cert_manager_io",
    "custom-resources/monocle_monocle_change_metrics_io",
    "custom-resources/chaos_mesh_org",
    "custom-resources/chaosblade_io",
    "custom-resources/che_eclipse_org",
    "custom-resources/cilium_io",
    "custom-resources/capsule_clastix_io",
    "custom-resources/kamaji_clastix_io",
    "custom-resources/ripsaw_cloudbulldozer_io",
    "custom-resources/postgresql_cnpg_io",
    "custom-resources/apps_clusternet_io",
    "custom-resources/clusters_clusternet_io",
    "custom-resources/nfd_k8s_sigs_io",
    "custom-resources/cluster_clusterpedia_io",
    "custom-resources/policy_clusterpedia_io",
    "custom-resources/ibmcloud_ibm_com",
    "custom-resources/confidentialcontainers_org",
    "custom-resources/couchbase_com",
    "custom-resources/craftypath_github_io",
    "custom-resources/apiextensions_crossplane_io",
    "custom-resources/pkg_crossplane_io",
    "custom-resources/secrets_crossplane_io",
    "custom-resources/operator_cryostat_io",
    "custom-resources/iot_eclipse_org",
    "custom-resources/druid_apache_org",
    "custom-resources/registry_devfile_io",
    "custom-resources/dex_coreos_com",
    "custom-resources/digitalis_io",
    "custom-resources/charts_operatorhub_io",
    "custom-resources/org_eclipse_che",
    "custom-resources/agent_k8s_elastic_co",
    "custom-resources/apm_k8s_elastic_co",
    "custom-resources/autoscaling_k8s_elastic_co",
    "custom-resources/beat_k8s_elastic_co",
    "custom-resources/elasticsearch_k8s_elastic_co",
    "custom-resources/enterprisesearch_k8s_elastic_co",
    "custom-resources/kibana_k8s_elastic_co",
    "custom-resources/maps_k8s_elastic_co",
    "custom-resources/getambassador_io",
    "custom-resources/apps_emqx_io",
    "custom-resources/automation_kubensync_com",
    "custom-resources/external_secrets_io",
    "custom-resources/canaries_flanksource_com",
    "custom-resources/fluentbit_fluent_io",
    "custom-resources/fluentd_fluent_io",
    "custom-resources/data_fluid_io",
    "custom-resources/flux_framework_org",
    "custom-resources/flagger_app",
    "custom-resources/helm_toolkit_fluxcd_io",
    "custom-resources/image_toolkit_fluxcd_io",
    "custom-resources/kustomize_toolkit_fluxcd_io",
    "custom-resources/notification_toolkit_fluxcd_io",
    "custom-resources/source_toolkit_fluxcd_io",
    "custom-resources/fossul_io",
    "custom-resources/execution_furiko_io",
    "custom-resources/apps_gitlab_com",
    "custom-resources/auth_ops42_org",
    "custom-resources/dex_gpu_ninja_com",
    "custom-resources/k6_io",
    "custom-resources/config_grafana_com",
    "custom-resources/loki_grafana_com",
    "custom-resources/tempo_grafana_com",
    "custom-resources/grafana_integreatly_org",
    "custom-resources/resources_teleport_dev",
    "custom-resources/netchecks_io",
    "custom-resources/app_terraform_io",
    "custom-resources/secrets_hashicorp_com",
    "custom-resources/hazelcast_com",
    "custom-resources/infinispan_org",
    "custom-resources/instana_io",
    "custom-resources/cluster_ipfs_io",
    "custom-resources/isindir_github_com",
    "custom-resources/extensions_istio_io",
    "custom-resources/install_istio_io",
    "custom-resources/networking_istio_io",
    "custom-resources/security_istio_io",
    "custom-resources/telemetry_istio_io",
    "custom-resources/jaegertracing_io",
    "custom-resources/k8gb_absa_oss",
    "custom-resources/cassandra_datastax_com",
    "custom-resources/control_k8ssandra_io",
    "custom-resources/k8up_io",
    "custom-resources/autoscaling_karmada_io",
    "custom-resources/config_karmada_io",
    "custom-resources/networking_karmada_io",
    "custom-resources/policy_karmada_io",
    "custom-resources/work_karmada_io",
    "custom-resources/keda_sh",
    "custom-resources/k8s_keycloak_org",
    "custom-resources/keycloak_org",
    "custom-resources/kiali_io",
    "custom-resources/app_kiegroup_org",
    "custom-resources/sonataflow_org",
    "custom-resources/operator_knative_dev",
    "custom-resources/config_koordinator_sh",
    "custom-resources/scheduling_koordinator_sh",
    "custom-resources/scheduling_sigs_k8s_io",
    "custom-resources/slo_koordinator_sh",
    "custom-resources/m4e_krestomat_io",
    "custom-resources/mirrors_kts_studio",
    "custom-resources/kube_green_com",
    "custom-resources/logging_extensions_banzaicloud_io",
    "custom-resources/logging_banzaicloud_io",
    "custom-resources/kubean_io",
    "custom-resources/kubecost_com",
    "custom-resources/apps_kubedl_io",
    "custom-resources/cache_kubedl_io",
    "custom-resources/inference_kubedl_io",
    "custom-resources/model_kubedl_io",
    "custom-resources/notebook_kubedl_io",
    "custom-resources/serving_kubedl_io",
    "custom-resources/training_kubedl_io",
    "custom-resources/apps_kubeedge_io",
    "custom-resources/devices_kubeedge_io",
    "custom-resources/operations_kubeedge_io",
    "custom-resources/policy_kubeedge_io",
    "custom-resources/reliablesyncs_kubeedge_io",
    "custom-resources/rules_kubeedge_io",
    "custom-resources/api_kubemod_io",
    "custom-resources/autoscaling_k8s_io",
    "custom-resources/groupsnapshot_storage_k8s_io",
    "custom-resources/snapshot_storage_k8s_io",
    "custom-resources/elbv2_k8s_aws",
    "custom-resources/boskos_k8s_io",
    "custom-resources/addons_cluster_x_k8s_io",
    "custom-resources/cluster_x_k8s_io",
    "custom-resources/ipam_cluster_x_k8s_io",
    "custom-resources/runtime_cluster_x_k8s_io",
    "custom-resources/operator_cluster_x_k8s_io",
    "custom-resources/infrastructure_cluster_x_k8s_io",
    "custom-resources/externaldns_k8s_io",
    "custom-resources/gateway_networking_k8s_io",
    "custom-resources/hnc_x_k8s_io",
    "custom-resources/jobset_x_k8s_io",
    "custom-resources/kmm_sigs_x_k8s_io",
    "custom-resources/kueue_x_k8s_io",
    "custom-resources/multicluster_x_k8s_io",
    "custom-resources/policy_networking_k8s_io",
    "custom-resources/nfd_kubernetes_io",
    "custom-resources/topology_node_k8s_io",
    "custom-resources/secrets_store_csi_x_k8s_io",
    "custom-resources/security_profiles_operator_x_k8s_io",
    "custom-resources/wgpolicyk8s_io",
    "custom-resources/executor_testkube_io",
    "custom-resources/tests_testkube_io",
    "custom-resources/devops_kubesphere_io",
    "custom-resources/forklift_konveyor_io",
    "custom-resources/kubevious_io",
    "custom-resources/core_kubeadmiral_io",
    "custom-resources/kuma_io",
    "custom-resources/chainsaw_kyverno_io",
    "custom-resources/kyverno_io",
    "custom-resources/reports_kyverno_io",
    "custom-resources/stunner_l7mp_io",
    "custom-resources/app_lightbend_com",
    "custom-resources/cloudformation_linki_space",
    "custom-resources/litmuschaos_io",
    "custom-resources/longhorn_io",
    "custom-resources/jobsmanager_raczylo_com",
    "custom-resources/apps_m88i_io",
    "custom-resources/k8s_mariadb_com",
    "custom-resources/mariadb_mmontes_io",
    "custom-resources/installation_mattermost_com",
    "custom-resources/mattermost_com",
    "custom-resources/fence_agents_remediation_medik8s_io",
    "custom-resources/machine_deletion_remediation_medik8s_io",
    "custom-resources/remediation_medik8s_io",
    "custom-resources/self_node_remediation_medik8s_io",
    "custom-resources/metacontroller_k8s_io",
    "custom-resources/metal3_io",
    "custom-resources/microcks_github_io",
    "custom-resources/crane_konveyor_io",
    "custom-resources/minio_min_io",
    "custom-resources/sts_min_io",
    "custom-resources/secretgenerator_mittwald_de",
    "custom-resources/flows_netobserv_io",
    "custom-resources/appprotect_f5_com",
    "custom-resources/appprotectdos_f5_com",
    "custom-resources/externaldns_nginx_org",
    "custom-resources/k8s_nginx_org",
    "custom-resources/gateway_nginx_org",
    "custom-resources/charts_opdev_io",
    "custom-resources/operator_open_cluster_management_io",
    "custom-resources/core_openfeature_dev",
    "custom-resources/config_gatekeeper_sh",
    "custom-resources/expansion_gatekeeper_sh",
    "custom-resources/externaldata_gatekeeper_sh",
    "custom-resources/mutations_gatekeeper_sh",
    "custom-resources/status_gatekeeper_sh",
    "custom-resources/templates_gatekeeper_sh",
    "custom-resources/opentelemetry_io",
    "custom-resources/certman_managed_openshift_io",
    "custom-resources/hive_openshift_io",
    "custom-resources/hiveinternal_openshift_io",
    "custom-resources/upgrade_managed_openshift_io",
    "custom-resources/ocmagent_managed_openshift_io",
    "custom-resources/ptp_openshift_io",
    "custom-resources/sriovnetwork_openshift_io",
    "custom-resources/k8s_otterize_com",
    "custom-resources/everest_percona_com",
    "custom-resources/pgv2_percona_com",
    "custom-resources/psmdb_percona_com",
    "custom-resources/ps_percona_com",
    "custom-resources/pxc_percona_com",
    "custom-resources/zookeeper_pravega_io",
    "custom-resources/quota_codeflare_dev",
    "custom-resources/workload_codeflare_dev",
    "custom-resources/crd_projectcalico_org",
    "custom-resources/projectcontour_io",
    "custom-resources/monitoring_coreos_com",
    "custom-resources/repo_manager_pulpproject_org",
    "custom-resources/secscan_quay_redhat_com",
    "custom-resources/quay_redhat_com",
    "custom-resources/upgrade_cattle_io",
    "custom-resources/ray_io",
    "custom-resources/keycloak_k8s_reddec_net",
    "custom-resources/redhatcop_redhat_io",
    "custom-resources/binding_operators_coreos_com",
    "custom-resources/servicebinding_io",
    "custom-resources/apps_redhat_com",
    "custom-resources/ceph_rook_io",
    "custom-resources/objectbucket_io",
    "custom-resources/databases_schemahero_io",
    "custom-resources/schemas_schemahero_io",
    "custom-resources/scylla_scylladb_com",
    "custom-resources/sematext_com",
    "custom-resources/operator_shipwright_io",
    "custom-resources/helm_sigstore_dev",
    "custom-resources/sloth_slok_dev",
    "custom-resources/virt_virtink_smartx_com",
    "custom-resources/s3_snappcloud_io",
    "custom-resources/charts_helm_k8s_io",
    "custom-resources/enterprise_gloo_solo_io",
    "custom-resources/gateway_solo_io",
    "custom-resources/gloo_solo_io",
    "custom-resources/graphql_gloo_solo_io",
    "custom-resources/egressgateway_spidernet_io",
    "custom-resources/databases_spotahome_com",
    "custom-resources/airflow_stackable_tech",
    "custom-resources/authentication_stackable_tech",
    "custom-resources/druid_stackable_tech",
    "custom-resources/edc_stackable_tech",
    "custom-resources/hbase_stackable_tech",
    "custom-resources/hdfs_stackable_tech",
    "custom-resources/hive_stackable_tech",
    "custom-resources/kafka_stackable_tech",
    "custom-resources/listeners_stackable_tech",
    "custom-resources/nifi_stackable_tech",
    "custom-resources/opa_stackable_tech",
    "custom-resources/secrets_stackable_tech",
    "custom-resources/spark_stackable_tech",
    "custom-resources/superset_stackable_tech",
    "custom-resources/trino_stackable_tech",
    "custom-resources/zookeeper_stackable_tech",
    "custom-resources/clustertemplate_openshift_io",
    "custom-resources/config_storageos_com",
    "custom-resources/storageos_com",
    "custom-resources/core_strimzi_io",
    "custom-resources/kafka_strimzi_io",
    "custom-resources/submariner_io",
    "custom-resources/site_superedge_io",
    "custom-resources/operator_tekton_dev",
    "custom-resources/ensembleoss_io",
    "custom-resources/theketch_io",
    "custom-resources/operator_tigera_io",
    "custom-resources/tinkerbell_org",
    "custom-resources/bmc_tinkerbell_org",
    "custom-resources/traefik_io",
    "custom-resources/tf_tungsten_io",
    "custom-resources/gitops_hybrid_cloud_patterns_io",
    "custom-resources/velero_io",
    "custom-resources/batch_volcano_sh",
    "custom-resources/bus_volcano_sh",
    "custom-resources/flow_volcano_sh",
    "custom-resources/nodeinfo_volcano_sh",
    "custom-resources/scheduling_volcano_sh",
    "custom-resources/infra_contrib_fluxcd_io",
    "custom-resources/wildfly_org",
    "code-generator"
]
resolver = "2"

[profile.dev]
# Disable settings to speeds up builds
debug = false
lto = "off"
incremental = false
strip = "none"
debug-assertions = false
overflow-checks = false
