# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[workspace]
members = [
    "custom-resources/about_k8s_io",
    "custom-resources/acid_zalan_do",
    "custom-resources/acme_cert_manager_io",
    "custom-resources/acmpca_services_k8s_aws",
    "custom-resources/actions_github_com",
    "custom-resources/actions_summerwind_dev",
    "custom-resources/addons_cluster_x_k8s_io",
    "custom-resources/agent_k8s_elastic_co",
    "custom-resources/akri_sh",
    "custom-resources/amd_com",
    "custom-resources/anywhere_eks_amazonaws_com",
    "custom-resources/apacheweb_arsenal_dev",
    "custom-resources/api_clever_cloud_com",
    "custom-resources/api_kubemod_io",
    "custom-resources/apicodegen_apimatic_io",
    "custom-resources/apiextensions_crossplane_io",
    "custom-resources/apigatewayv2_services_k8s_aws",
    "custom-resources/apisix_apache_org",
    "custom-resources/apm_k8s_elastic_co",
    "custom-resources/app_k8s_io",
    "custom-resources/app_kiegroup_org",
    "custom-resources/app_lightbend_com",
    "custom-resources/app_redislabs_com",
    "custom-resources/app_terraform_io",
    "custom-resources/application_networking_k8s_aws",
    "custom-resources/applicationautoscaling_services_k8s_aws",
    "custom-resources/appmesh_k8s_aws",
    "custom-resources/appprotect_f5_com",
    "custom-resources/appprotectdos_f5_com",
    "custom-resources/apps_3scale_net",
    "custom-resources/apps_clusternet_io",
    "custom-resources/apps_emqx_io",
    "custom-resources/apps_gitlab_com",
    "custom-resources/apps_kubeblocks_io",
    "custom-resources/apps_kubedl_io",
    "custom-resources/apps_kubeedge_io",
    "custom-resources/apps_m88i_io",
    "custom-resources/apps_redhat_com",
    "custom-resources/aquasecurity_github_io",
    "custom-resources/argoproj_io",
    "custom-resources/asdb_aerospike_com",
    "custom-resources/atlasmap_io",
    "custom-resources/auth_ops42_org",
    "custom-resources/authentication_stackable_tech",
    "custom-resources/authzed_com",
    "custom-resources/automation_kubensync_com",
    "custom-resources/autoscaling_k8s_io",
    "custom-resources/autoscaling_karmada_io",
    "custom-resources/awx_ansible_com",
    "custom-resources/azure_microsoft_com",
    "custom-resources/b3scale_infra_run",
    "custom-resources/b3scale_io",
    "custom-resources/barmancloud_cnpg_io",
    "custom-resources/batch_volcano_sh",
    "custom-resources/beat_k8s_elastic_co",
    "custom-resources/beegfs_csi_netapp_com",
    "custom-resources/binding_operators_coreos_com",
    "custom-resources/bitnami_com",
    "custom-resources/bmc_tinkerbell_org",
    "custom-resources/boskos_k8s_io",
    "custom-resources/bpfman_io",
    "custom-resources/bus_volcano_sh",
    "custom-resources/cache_kubedl_io",
    "custom-resources/caching_ibm_com",
    "custom-resources/camel_apache_org",
    "custom-resources/capabilities_3scale_net",
    "custom-resources/capsule_clastix_io",
    "custom-resources/cassandra_datastax_com",
    "custom-resources/ceph_rook_io",
    "custom-resources/cert_manager_io",
    "custom-resources/certman_managed_openshift_io",
    "custom-resources/chainsaw_kyverno_io",
    "custom-resources/chaos_mesh_org",
    "custom-resources/chaosblade_io",
    "custom-resources/charts_amd_com",
    "custom-resources/charts_flagsmith_com",
    "custom-resources/charts_helm_k8s_io",
    "custom-resources/charts_opdev_io",
    "custom-resources/charts_operatorhub_io",
    "custom-resources/che_eclipse_org",
    "custom-resources/chisel_operator_io",
    "custom-resources/cilium_io",
    "custom-resources/claudie_io",
    "custom-resources/cloudformation_linki_space",
    "custom-resources/cloudfront_services_k8s_aws",
    "custom-resources/cloudtrail_services_k8s_aws",
    "custom-resources/cloudwatch_aws_amazon_com",
    "custom-resources/cloudwatch_services_k8s_aws",
    "custom-resources/cloudwatchlogs_services_k8s_aws",
    "custom-resources/cluster_clusterpedia_io",
    "custom-resources/cluster_ipfs_io",
    "custom-resources/cluster_x_k8s_io",
    "custom-resources/clusters_clusternet_io",
    "custom-resources/clustertemplate_openshift_io",
    "custom-resources/confidentialcontainers_org",
    "custom-resources/config_gatekeeper_sh",
    "custom-resources/config_grafana_com",
    "custom-resources/config_karmada_io",
    "custom-resources/config_koordinator_sh",
    "custom-resources/config_storageos_com",
    "custom-resources/control_k8ssandra_io",
    "custom-resources/core_kubeadmiral_io",
    "custom-resources/core_linuxsuren_github_com",
    "custom-resources/core_openfeature_dev",
    "custom-resources/couchbase_com",
    "custom-resources/craftypath_github_io",
    "custom-resources/crane_konveyor_io",
    "custom-resources/crd_projectcalico_org",
    "custom-resources/data_fluid_io",
    "custom-resources/databases_schemahero_io",
    "custom-resources/databases_spotahome_com",
    "custom-resources/datadoghq_com",
    "custom-resources/dataprotection_kubeblocks_io",
    "custom-resources/designer_kaoto_io",
    "custom-resources/devices_kubeedge_io",
    "custom-resources/devops_kubesphere_io",
    "custom-resources/dex_coreos_com",
    "custom-resources/dex_gpu_ninja_com",
    "custom-resources/digitalis_io",
    "custom-resources/documentdb_services_k8s_aws",
    "custom-resources/druid_apache_org",
    "custom-resources/dynamodb_services_k8s_aws",
    "custom-resources/ec2_services_k8s_aws",
    "custom-resources/ecr_services_k8s_aws",
    "custom-resources/efs_services_k8s_aws",
    "custom-resources/egressgateway_spidernet_io",
    "custom-resources/eks_services_k8s_aws",
    "custom-resources/elasticache_services_k8s_aws",
    "custom-resources/elasticsearch_k8s_elastic_co",
    "custom-resources/elbv2_k8s_aws",
    "custom-resources/emrcontainers_services_k8s_aws",
    "custom-resources/ensembleoss_io",
    "custom-resources/enterprisesearch_k8s_elastic_co",
    "custom-resources/everest_percona_com",
    "custom-resources/execution_furiko_io",
    "custom-resources/executor_testkube_io",
    "custom-resources/expansion_gatekeeper_sh",
    "custom-resources/experimental_kubeblocks_io",
    "custom-resources/extensions_istio_io",
    "custom-resources/extensions_kubeblocks_io",
    "custom-resources/external_secrets_io",
    "custom-resources/externaldata_gatekeeper_sh",
    "custom-resources/externaldns_k8s_io",
    "custom-resources/externaldns_nginx_org",
    "custom-resources/flagger_app",
    "custom-resources/flink_apache_org",
    "custom-resources/flow_volcano_sh",
    "custom-resources/flows_netobserv_io",
    "custom-resources/fluentbit_fluent_io",
    "custom-resources/fluentd_fluent_io",
    "custom-resources/flux_framework_org",
    "custom-resources/fluxcd_controlplane_io",
    "custom-resources/forklift_konveyor_io",
    "custom-resources/fossul_io",
    "custom-resources/frrk8s_metallb_io",
    "custom-resources/gateway_networking_k8s_io",
    "custom-resources/gateway_networking_x_k8s_io",
    "custom-resources/gateway_nginx_org",
    "custom-resources/generators_external_secrets_io",
    "custom-resources/getambassador_io",
    "custom-resources/gitops_hybrid_cloud_patterns_io",
    "custom-resources/grafana_integreatly_org",
    "custom-resources/groupsnapshot_storage_k8s_io",
    "custom-resources/hazelcast_com",
    "custom-resources/helm_sigstore_dev",
    "custom-resources/helm_toolkit_fluxcd_io",
    "custom-resources/hive_openshift_io",
    "custom-resources/hiveinternal_openshift_io",
    "custom-resources/hnc_x_k8s_io",
    "custom-resources/hyperfoil_io",
    "custom-resources/hyperspike_io",
    "custom-resources/iam_services_k8s_aws",
    "custom-resources/ibmcloud_ibm_com",
    "custom-resources/image_toolkit_fluxcd_io",
    "custom-resources/imaging_ingestion_alvearie_org",
    "custom-resources/inference_kubedl_io",
    "custom-resources/infinispan_org",
    "custom-resources/infra_contrib_fluxcd_io",
    "custom-resources/infrastructure_cluster_x_k8s_io",
    "custom-resources/install_istio_io",
    "custom-resources/installation_mattermost_com",
    "custom-resources/instana_io",
    "custom-resources/integration_rock8s_com",
    "custom-resources/iot_eclipse_org",
    "custom-resources/ipam_cluster_x_k8s_io",
    "custom-resources/ipam_metal3_io",
    "custom-resources/isindir_github_com",
    "custom-resources/jaegertracing_io",
    "custom-resources/jenkins_io",
    "custom-resources/jetstream_nats_io",
    "custom-resources/jobset_x_k8s_io",
    "custom-resources/jobsmanager_raczylo_com",
    "custom-resources/k6_io",
    "custom-resources/k8gb_absa_oss",
    "custom-resources/k8s_keycloak_org",
    "custom-resources/k8s_mariadb_com",
    "custom-resources/k8s_nginx_org",
    "custom-resources/k8s_otterize_com",
    "custom-resources/k8up_io",
    "custom-resources/kafka_banzaicloud_io",
    "custom-resources/kafka_services_k8s_aws",
    "custom-resources/kafka_strimzi_io",
    "custom-resources/kamaji_clastix_io",
    "custom-resources/karpenter_k8s_aws",
    "custom-resources/karpenter_sh",
    "custom-resources/keda_sh",
    "custom-resources/keycloak_k8s_reddec_net",
    "custom-resources/keycloak_org",
    "custom-resources/keyspaces_services_k8s_aws",
    "custom-resources/kibana_k8s_elastic_co",
    "custom-resources/kinesis_services_k8s_aws",
    "custom-resources/kmm_sigs_x_k8s_io",
    "custom-resources/kms_services_k8s_aws",
    "custom-resources/kom_kaiso_github_io",
    "custom-resources/kuadrant_io",
    "custom-resources/kube_green_com",
    "custom-resources/kubean_io",
    "custom-resources/kubecost_com",
    "custom-resources/kubevious_io",
    "custom-resources/kueue_x_k8s_io",
    "custom-resources/kuma_io",
    "custom-resources/kustomize_toolkit_fluxcd_io",
    "custom-resources/kyverno_io",
    "custom-resources/lambda_services_k8s_aws",
    "custom-resources/leaksignal_com",
    "custom-resources/lerentis_uploadfilter24_eu",
    "custom-resources/limitador_kuadrant_io",
    "custom-resources/listeners_stackable_tech",
    "custom-resources/litmuschaos_io",
    "custom-resources/logging_banzaicloud_io",
    "custom-resources/logging_extensions_banzaicloud_io",
    "custom-resources/logstash_k8s_elastic_co",
    "custom-resources/loki_grafana_com",
    "custom-resources/longhorn_io",
    "custom-resources/m4e_krestomat_io",
    "custom-resources/machine_deletion_remediation_medik8s_io",
    "custom-resources/maps_k8s_elastic_co",
    "custom-resources/mariadb_mmontes_io",
    "custom-resources/mariadb_persistentsys",
    "custom-resources/marin3r_3scale_net",
    "custom-resources/mattermost_com",
    "custom-resources/memorydb_services_k8s_aws",
    "custom-resources/metacontroller_k8s_io",
    "custom-resources/metal3_io",
    "custom-resources/metallb_io",
    "custom-resources/microcks_github_io",
    "custom-resources/minio_min_io",
    "custom-resources/mirrors_kts_studio",
    "custom-resources/model_kubedl_io",
    "custom-resources/monitoring_coreos_com",
    "custom-resources/monitoring_giantswarm_io",
    "custom-resources/monocle_monocle_change_metrics_io",
    "custom-resources/mq_services_k8s_aws",
    "custom-resources/multicluster_crd_antrea_io",
    "custom-resources/multicluster_x_k8s_io",
    "custom-resources/mutations_gatekeeper_sh",
    "custom-resources/nativestor_alauda_io",
    "custom-resources/netbird_io",
    "custom-resources/netchecks_io",
    "custom-resources/networkfirewall_services_k8s_aws",
    "custom-resources/networking_gke_io",
    "custom-resources/networking_istio_io",
    "custom-resources/networking_k8s_aws",
    "custom-resources/networking_karmada_io",
    "custom-resources/nfd_k8s_sigs_io",
    "custom-resources/nfd_kubernetes_io",
    "custom-resources/nodeinfo_volcano_sh",
    "custom-resources/notebook_kubedl_io",
    "custom-resources/notification_toolkit_fluxcd_io",
    "custom-resources/objectbucket_io",
    "custom-resources/objectstorage_k8s_io",
    "custom-resources/ocmagent_managed_openshift_io",
    "custom-resources/onepassword_com",
    "custom-resources/opensearch_opster_io",
    "custom-resources/opensearchservice_services_k8s_aws",
    "custom-resources/opentelemetry_io",
    "custom-resources/operations_kubeblocks_io",
    "custom-resources/operations_kubeedge_io",
    "custom-resources/operator_aquasec_com",
    "custom-resources/operator_authorino_kuadrant_io",
    "custom-resources/operator_cluster_x_k8s_io",
    "custom-resources/operator_cryostat_io",
    "custom-resources/operator_marin3r_3scale_net",
    "custom-resources/operator_open_cluster_management_io",
    "custom-resources/operator_shipwright_io",
    "custom-resources/operator_tekton_dev",
    "custom-resources/operator_tigera_io",
    "custom-resources/operator_victoriametrics_com",
    "custom-resources/oracle_db_anthosapis_com",
    "custom-resources/org_eclipse_che",
    "custom-resources/organizations_services_k8s_aws",
    "custom-resources/parameters_kubeblocks_io",
    "custom-resources/perses_dev",
    "custom-resources/pgv2_percona_com",
    "custom-resources/pipes_services_k8s_aws",
    "custom-resources/pkg_crossplane_io",
    "custom-resources/policies_kyverno_io",
    "custom-resources/policy_clusterpedia_io",
    "custom-resources/policy_karmada_io",
    "custom-resources/policy_kubeedge_io",
    "custom-resources/policy_networking_k8s_io",
    "custom-resources/postgres_operator_crunchydata_com",
    "custom-resources/postgresql_cnpg_io",
    "custom-resources/projectcontour_io",
    "custom-resources/prometheusservice_services_k8s_aws",
    "custom-resources/ps_percona_com",
    "custom-resources/psmdb_percona_com",
    "custom-resources/ptp_openshift_io",
    "custom-resources/pxc_percona_com",
    "custom-resources/quay_redhat_com",
    "custom-resources/quota_codeflare_dev",
    "custom-resources/ray_io",
    "custom-resources/rbacmanager_reactiveops_io",
    "custom-resources/rc_app_stacks",
    "custom-resources/rds_services_k8s_aws",
    "custom-resources/redhatcop_redhat_io",
    "custom-resources/registry_apicur_io",
    "custom-resources/registry_devfile_io",
    "custom-resources/reliablesyncs_kubeedge_io",
    "custom-resources/remediation_medik8s_io",
    "custom-resources/repo_manager_pulpproject_org",
    "custom-resources/reports_kyverno_io",
    "custom-resources/reports_x_k8s_io",
    "custom-resources/resources_teleport_dev",
    "custom-resources/rocketmq_apache_org",
    "custom-resources/route53_services_k8s_aws",
    "custom-resources/route53resolver_services_k8s_aws",
    "custom-resources/rules_kubeedge_io",
    "custom-resources/runtime_cluster_x_k8s_io",
    "custom-resources/s3_services_k8s_aws",
    "custom-resources/s3_snappcloud_io",
    "custom-resources/sagemaker_services_k8s_aws",
    "custom-resources/scheduling_koordinator_sh",
    "custom-resources/scheduling_sigs_k8s_io",
    "custom-resources/scheduling_volcano_sh",
    "custom-resources/schemas_schemahero_io",
    "custom-resources/scylla_scylladb_com",
    "custom-resources/secretgenerator_mittwald_de",
    "custom-resources/secrets_crossplane_io",
    "custom-resources/secrets_doppler_com",
    "custom-resources/secrets_hashicorp_com",
    "custom-resources/secrets_stackable_tech",
    "custom-resources/secrets_store_csi_x_k8s_io",
    "custom-resources/secretsmanager_services_k8s_aws",
    "custom-resources/secscan_quay_redhat_com",
    "custom-resources/security_istio_io",
    "custom-resources/security_profiles_operator_x_k8s_io",
    "custom-resources/self_node_remediation_medik8s_io",
    "custom-resources/sematext_com",
    "custom-resources/servicebinding_io",
    "custom-resources/servicemesh_cisco_com",
    "custom-resources/services_k8s_aws",
    "custom-resources/serving_kubedl_io",
    "custom-resources/sfn_services_k8s_aws",
    "custom-resources/site_superedge_io",
    "custom-resources/slinky_slurm_net",
    "custom-resources/slo_koordinator_sh",
    "custom-resources/sloth_slok_dev",
    "custom-resources/snapscheduler_backube",
    "custom-resources/snapshot_storage_k8s_io",
    "custom-resources/sns_services_k8s_aws",
    "custom-resources/sonataflow_org",
    "custom-resources/source_toolkit_fluxcd_io",
    "custom-resources/sparkoperator_k8s_io",
    "custom-resources/spv_no",
    "custom-resources/sqs_services_k8s_aws",
    "custom-resources/sriovnetwork_openshift_io",
    "custom-resources/status_gatekeeper_sh",
    "custom-resources/storage_kubeblocks_io",
    "custom-resources/storageos_com",
    "custom-resources/sts_min_io",
    "custom-resources/stunner_l7mp_io",
    "custom-resources/submariner_io",
    "custom-resources/superset_stackable_tech",
    "custom-resources/telemetry_istio_io",
    "custom-resources/templates_gatekeeper_sh",
    "custom-resources/tempo_grafana_com",
    "custom-resources/temporal_io",
    "custom-resources/tests_testkube_io",
    "custom-resources/tf_tungsten_io",
    "custom-resources/theketch_io",
    "custom-resources/tinkerbell_org",
    "custom-resources/topology_node_k8s_io",
    "custom-resources/topology_volcano_sh",
    "custom-resources/topolvm_cybozu_com",
    "custom-resources/trace_kubeblocks_io",
    "custom-resources/traefik_io",
    "custom-resources/training_kubedl_io",
    "custom-resources/trident_netapp_io",
    "custom-resources/trino_stackable_tech",
    "custom-resources/troubleshoot_sh",
    "custom-resources/trust_cert_manager_io",
    "custom-resources/upgrade_cattle_io",
    "custom-resources/upgrade_managed_openshift_io",
    "custom-resources/velero_io",
    "custom-resources/virt_virtink_smartx_com",
    "custom-resources/volsync_backube",
    "custom-resources/vpcresources_k8s_aws",
    "custom-resources/wgpolicyk8s_io",
    "custom-resources/wildfly_org",
    "custom-resources/work_karmada_io",
    "custom-resources/workload_codeflare_dev",
    "custom-resources/workloads_kubeblocks_io",
    "custom-resources/workspace_maistra_io",
    "custom-resources/zonecontrol_k8s_aws",
    "custom-resources/zookeeper_pravega_io",
    "custom-resources/zookeeper_stackable_tech",
]
resolver = "2"
exclude = ["code-generator"]

[workspace.package]
edition = "2021"
authors = ["The kube-custom-resources-rs authors"]
description = "Kubernetes Custom Resource Bindings"
homepage = "https://github.com/metio/kube-custom-resources-rs/"
keywords = ["kubernetes", "custom-resources"]
categories = ["api-bindings"]
license = "0BSD"
repository = "https://github.com/metio/kube-custom-resources-rs"

[profile.dev]
# Disable settings to speed up builds
debug = false
lto = "off"
incremental = false
strip = "none"
debug-assertions = false
overflow-checks = false
