# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "code-generator"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
publish = false

[dependencies]
glob = { version = "0.3.2" }
handlebars = { version = "6.3.0" }
itertools = { version = "0.13.0" }
k8s-openapi = { version = "~0", features = ["latest"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
serde_yaml_ng = { version = "0.10.0" }

[package.metadata.workspaces]
independent = true
