# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "code-generator"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
publish = false

[dependencies]
glob = { version = "0.3.3" }
handlebars = { version = "6.3.2" }
itertools = { version = "0.14.0" }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
serde_yaml_ng = { version = "0.10.0" }
