# SPDX-FileCopyrightText: The kube-custom-resources-rs Authors
# SPDX-License-Identifier: 0BSD

[package]
name = "code-generator"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
publish = false

[dependencies]
glob = { version = "0.3.3" }
handlebars = { version = "6.4.1" }
itertools = { version = "0.14.0" }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
serde_yaml_ng = { version = "0.10.0" }
