[package]
name = "crd-v1-fetcher"
version = "1.0.0"
authors = ["Sebastian Hoß <seb@hoß.de>"]
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls-tls"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde_yaml = { version = "0.9.27" }
